--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
+  "engines": {
+    "node": "14.15"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
