--- a/package.json
+++ b/package.json
@@ -15,17 +15,24 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.1",
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.13.1",
     "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-netlify-cms": "^5.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.0",
     "gatsby-plugin-sitemap": "^4.10.0",
+    "gatsby-plugin-styled-components": "^4.14.0",
     "gatsby-source-filesystem": "^3.14.0",
     "gatsby-transformer-sharp": "^3.14.0",
+    "gsap": "^3.8.0",
     "netlify-cms-app": "^2.15.46",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.17.0",
+    "styled-components": "^5.3.1",
+    "yup": "^0.32.9"
   }
 }
