--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.13.1",
     "gatsby-plugin-image": "^1.14.0",
+    "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-netlify-cms": "^5.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.0",
