--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@hookform/resolvers": "^2.8.1",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.13.1",
+    "gatsby-link": "^3.14.0",
+    "gatsby-plugin-google-tagmanager": "^3.14.0",
     "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-manifest": "^3.14.0",
     "gatsby-plugin-netlify-cms": "^5.14.0",
