--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@hookform/resolvers": "^2.8.1",
+    "@mui/material": "^5.0.3",
     "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.13.1",
     "gatsby-link": "^3.14.0",
     "gatsby-plugin-google-tagmanager": "^3.14.0",
     "gatsby-plugin-image": "^1.14.0",
     "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-material-ui": "^4.0.2",
     "gatsby-plugin-netlify-cms": "^5.14.0",
     "gatsby-plugin-react-helmet": "^4.14.0",
     "gatsby-plugin-sharp": "^3.14.0",
@@ -35,6 +39,8 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.17.0",
+    "react-reveal": "^1.2.2",
+    "react-use": "^17.3.1",
     "styled-components": "^5.3.1",
     "yup": "^0.32.9"
   }
