--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Gatsby Publish
 on:
   push:
     branches:
-      - gatsby
+      - gatsby2
 
 jobs:
   build:
@@ -13,3 +13,5 @@ jobs:
       - uses: enriikke/gatsby-gh-pages-action@v2
         with:
           access-token: ${{ secrets.ACCESS_TOKEN }}
+      - run: touch CNAME
+      - run: echo 'www.remigo.com' > CNAME
