--- a/package.json
+++ b/package.json
@@ -1,62 +1,25 @@
 {
-  "name": "remigo-landing-website",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@hookform/resolvers": "^2.8.0",
-    "@material-ui/core": "^5.0.0-beta.5",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@material-ui/styled-engine-sc": "^5.0.0-beta.5",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.4.3",
-    "@mui/styled-engine-sc": "^5.4.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "agile_crm": "^1.2.5",
-    "emailjs-com": "^3.2.0",
-    "gsap": "^3.7.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.15.3",
-    "react-icons": "^4.3.1",
-    "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
-    "react-swipeable": "^6.2.0",
-    "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
-  },
+  "name": "remigos.github.io",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": {
-    "node": "^14.15.4"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/remigos/remigos.github.io.git"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/remigos/remigos.github.io/issues"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "homepage": "https://github.com/remigos/remigos.github.io#readme",
+  "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
+    "express": "^4.17.3",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
