--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "agile_crm": "^1.2.5",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
+    "framer-motion": "4.1.17",
     "gsap": "^3.7.1",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
@@ -27,6 +28,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^8.33.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
