--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"nodemon server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -18,8 +20,10 @@
   "homepage": "https://github.com/remigos/remigos.github.io#readme",
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
+    "concurrently": "^7.0.0",
     "express": "^4.17.3",
     "nodemailer": "^6.7.2",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "react-reveal": "^1.2.2"
   }
 }
