--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.3",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "nodemon": "^2.0.15",
     "react-reveal": "^1.2.2"
   }
 }
