--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.15.3",
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
