--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styled-engine-sc": "^5.0.0-beta.5",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.4.3",
     "@mui/styled-engine-sc": "^5.4.2",
+    "@mui/styles": "^5.6.2",
     "@sendgrid/mail": "^7.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -30,7 +32,7 @@
     "react-icons": "^4.3.1",
     "react-intersection-observer": "^8.33.1",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^5.2.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
     "react-swipeable": "^6.2.0",
