--- a/sendgrid/package.json
+++ b/sendgrid/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
+    "dotenv": "^16.0.1",
     "nodemailer": "^6.7.5",
     "nodemailer-sendgrid-transport": "^0.2.0"
   }
