--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "gatsby": "^4.15.1",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-tagmanager": "^4.16.0",
     "gatsby-plugin-image": "^2.15.0",
     "gatsby-plugin-manifest": "^4.15.0",
     "gatsby-plugin-material-ui": "^4.1.0",
