--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sendgrid/mail": "^7.6.2",
     "concurrently": "^7.0.0",
     "express": "^4.17.3",
+    "gatsby-plugin-google-tagmanager": "^4.16.0",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.15",
