--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "@mui/system": "^5.8.2",
+    "@reach/router": "^1.3.4",
     "babel-plugin-styled-components": "^2.0.7",
     "formik": "^2.2.9",
     "gatsby": "^4.15.1",
