--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@mui/system": "^5.8.2",
     "@reach/router": "^1.3.4",
     "babel-plugin-styled-components": "^2.0.7",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "gatsby": "^4.15.1",
     "gatsby-image": "^3.11.0",
