--- a/sendgrid/package.json
+++ b/sendgrid/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sendgrid",
   "version": "1.0.0",
-  "description": "",
   "main": "sendgrid.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,9 +8,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^7.6.2",
+    "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.1",
     "nodemailer": "^6.7.5",
     "nodemailer-sendgrid-transport": "^0.2.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
